@@ -1,11 +1,11 @@
 package id.ac.ui.cs.advprog.heymartorder.service;
 
-import id.ac.ui.cs.advprog.heymartorder.model.KeranjangBelanja;
-import id.ac.ui.cs.advprog.heymartorder.model.KeranjangBelanjaBuilder;
-import id.ac.ui.cs.advprog.heymartorder.model.KeranjangItem;
 import id.ac.ui.cs.advprog.heymartorder.dto.GetProductResponse;
+import id.ac.ui.cs.advprog.heymartorder.model.KeranjangBelanja;
+import id.ac.ui.cs.advprog.heymartorder.model.KeranjangItem;
 import id.ac.ui.cs.advprog.heymartorder.repository.KeranjangBelanjaRepository;
 import id.ac.ui.cs.advprog.heymartorder.repository.KeranjangItemRepository;
+import id.ac.ui.cs.advprog.heymartorder.rest.ProductService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -14,9 +14,12 @@ import org.mockito.MockitoAnnotations;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 class KeranjangBelanjaServiceImplTest {
@@ -33,9 +36,13 @@ class KeranjangBelanjaServiceImplTest {
     @Mock
     private ProductService productService;
 
+    @Mock
+    private KeranjangLogService logService;
+
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
+        when(logService.logProductAddedToCart(anyLong(), anyString())).thenReturn(CompletableFuture.completedFuture(null));
     }
 
     @Test
@@ -65,13 +72,120 @@ class KeranjangBelanjaServiceImplTest {
     }
 
     @Test
+    void testFindKeranjangByIdNotFound() {
+        Long userId = 1L;
+        when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.empty());
+
+        assertThrows(NoSuchElementException.class, () -> keranjangBelanjaService.findKeranjangById(userId));
+    }
+
+    @Test
     void testAddProductToKeranjang() {
+        Long userId = 1L;
+        String productId1 = "product1";
+        Long supermarketId = 2L;
+        KeranjangBelanja keranjangBelanja = KeranjangBelanja.getBuilder().setId(userId).setSupermarketId(null).build();
+
+        GetProductResponse product1 = new GetProductResponse();
+        product1.setUUID(productId1);
+        product1.setName("Product 1");
+        product1.setStock(10);
+        product1.setPrice(10L);
+
+        String token = "token";
+
+        when(productService.getProductById(productId1, token)).thenReturn(product1);
+        when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
+        when(keranjangBelanjaRepository.save(any(KeranjangBelanja.class))).thenReturn(keranjangBelanja);
+        doReturn(CompletableFuture.completedFuture(null)).when(logService).logProductAddedToCart(userId, productId1);
+
+        KeranjangBelanja result = keranjangBelanjaService.addProductToKeranjang(userId, productId1, supermarketId, token);
+
+        assertEquals(1, result.getListKeranjangItem().size());
+        assertEquals(productId1, result.getListKeranjangItem().getFirst().getProductId());
+        assertEquals(1, result.getListKeranjangItem().getFirst().getAmount());
+
+        result = keranjangBelanjaService.addProductToKeranjang(userId, productId1, supermarketId, token);
+
+        assertEquals(1, result.getListKeranjangItem().size());
+        assertEquals(productId1, result.getListKeranjangItem().getFirst().getProductId());
+        assertEquals(2, result.getListKeranjangItem().getFirst().getAmount());
+
+        verify(keranjangBelanjaRepository, times(2)).save(keranjangBelanja);
+        verify(logService, times(2)).logProductAddedToCart(userId, productId1);
+    }
+
+    @Test
+    void testAddProductGreaterThanStock() {
+        Long userId = 1L;
+        String productId1 = "product1";
+        Long supermarketId = 2L;
+        KeranjangBelanja keranjangBelanja = KeranjangBelanja.getBuilder().setId(userId).setSupermarketId(null).build();
+
+        GetProductResponse product1 = new GetProductResponse();
+        product1.setUUID(productId1);
+        product1.setName("Product 1");
+        product1.setStock(1);
+        product1.setPrice(10L);
+
+        String token = "token";
+
+        when(productService.getProductById(productId1, token)).thenReturn(product1);
+        when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
+        when(keranjangBelanjaRepository.save(any(KeranjangBelanja.class))).thenReturn(keranjangBelanja);
+        doReturn(CompletableFuture.completedFuture(null)).when(logService).logProductAddedToCart(userId, productId1);
+
+        keranjangBelanjaService.addProductToKeranjang(userId, productId1, supermarketId, token);
+
+        assertThrows(IllegalArgumentException.class, () -> keranjangBelanjaService.addProductToKeranjang(userId, productId1, supermarketId, token));
+        verify(logService, times(1)).logProductAddedToCart(userId, productId1);
+    }
+
+    @Test
+    void testAddProductToKeranjangInsufficientStock() {
         Long userId = 1L;
         String productId = "product1";
         Long supermarketId = 2L;
-        KeranjangBelanja keranjangBelanja = new KeranjangBelanja();
-        keranjangBelanja.setId(userId);
-        keranjangBelanja.setSupermarketId(supermarketId);
+        KeranjangBelanja keranjangBelanja = KeranjangBelanja.getBuilder().setId(userId).setSupermarketId(supermarketId).build();
+        keranjangBelanja.setListKeranjangItem(new ArrayList<>());
+
+        GetProductResponse product1 = new GetProductResponse();
+        product1.setUUID(productId);
+        product1.setName("Product 1");
+        product1.setStock(0);
+        product1.setPrice(10L);
+
+        String token = "token";
+
+        when(productService.getProductById(productId, token)).thenReturn(product1);
+        when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
+
+        assertThrows(IllegalArgumentException.class, () -> keranjangBelanjaService.addProductToKeranjang(userId, productId, supermarketId, token));
+    }
+
+    @Test
+    void testAddProductToKeranjangProductNotFound() {
+        Long userId = 1L;
+        String productId = "product1";
+        Long supermarketId = 2L;
+        KeranjangBelanja keranjangBelanja = KeranjangBelanja.getBuilder().setId(userId).setSupermarketId(supermarketId).build();
+        keranjangBelanja.setListKeranjangItem(new ArrayList<>());
+
+        String token = "token";
+
+        when(productService.getProductById(productId, token)).thenReturn(null);
+        when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
+
+        assertThrows(IllegalArgumentException.class, () -> keranjangBelanjaService.addProductToKeranjang(userId, productId, supermarketId, token));
+    }
+
+    @Test
+    void testAddProductToKeranjangSupermarketMismatch() {
+        Long userId = 1L;
+        String productId = "product1";
+        Long supermarketId = 2L;
+        Long otherSupermarketId = 3L;
+        KeranjangBelanja keranjangBelanja = KeranjangBelanja.getBuilder().setId(userId).setSupermarketId(otherSupermarketId).build();
         keranjangBelanja.setListKeranjangItem(new ArrayList<>());
 
         GetProductResponse product1 = new GetProductResponse();
@@ -80,23 +194,19 @@ class KeranjangBelanjaServiceImplTest {
         product1.setStock(10);
         product1.setPrice(10L);
 
-        when(productService.getProductById(productId)).thenReturn(product1);
+        String token = "token";
+
+        when(productService.getProductById(productId, token)).thenReturn(product1);
         when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
-        when(keranjangBelanjaRepository.save(any(KeranjangBelanja.class))).thenReturn(keranjangBelanja);
 
-        KeranjangBelanja result = keranjangBelanjaService.addProductToKeranjang(userId, productId, supermarketId);
-
-        assertEquals(1, result.getListKeranjangItem().size());
-        assertEquals(productId, result.getListKeranjangItem().get(0).getProductId());
-        assertEquals(1, result.getListKeranjangItem().get(0).getAmount());
-        verify(keranjangBelanjaRepository, times(1)).save(keranjangBelanja);
+        assertThrows(IllegalArgumentException.class, () -> keranjangBelanjaService.addProductToKeranjang(userId, productId, supermarketId, token));
     }
 
     @Test
     void testRemoveProductFromKeranjang() {
         Long userId = 1L;
         String productId = "product1";
-        KeranjangBelanja keranjangBelanja = new KeranjangBelanjaBuilder().setId(userId).build();
+        KeranjangBelanja keranjangBelanja = KeranjangBelanja.getBuilder().setId(userId).build();
         List<KeranjangItem> items = new ArrayList<>();
         KeranjangItem item = KeranjangItem.getBuilder().setProductId(productId).setAmount(2).build();
         item.setKeranjangbelanja(keranjangBelanja);
@@ -105,12 +215,14 @@ class KeranjangBelanjaServiceImplTest {
 
         when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
         when(keranjangBelanjaRepository.save(any(KeranjangBelanja.class))).thenReturn(keranjangBelanja);
+        doReturn(CompletableFuture.completedFuture(null)).when(logService).logProductRemovedFromCart(userId, productId);
 
         KeranjangBelanja result = keranjangBelanjaService.removeProductFromKeranjang(userId, productId);
 
         assertEquals(1, result.getListKeranjangItem().size());
-        assertEquals(1, result.getListKeranjangItem().get(0).getAmount());
+        assertEquals(1, result.getListKeranjangItem().getFirst().getAmount());
         verify(keranjangBelanjaRepository, times(1)).save(keranjangBelanja);
+        verify(logService, times(1)).logProductRemovedFromCart(userId, productId);
     }
 
     @Test
@@ -118,9 +230,7 @@ class KeranjangBelanjaServiceImplTest {
         Long userId = 1L;
         Long supermarketid = 2L;
         String productId = "product1";
-        KeranjangBelanja keranjangBelanja = new KeranjangBelanja();
-        keranjangBelanja.setId(userId);
-        keranjangBelanja.setSupermarketId(2L);
+        KeranjangBelanja keranjangBelanja = KeranjangBelanja.getBuilder().setId(userId).setSupermarketId(supermarketid).build();
 
         KeranjangItem item = KeranjangItem.getBuilder()
                 .setProductId(productId)
@@ -134,6 +244,7 @@ class KeranjangBelanjaServiceImplTest {
 
         when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
         when(keranjangItemRepository.findByProductId(productId)).thenReturn(Optional.of(item));
+        doReturn(CompletableFuture.completedFuture(null)).when(logService).logProductRemovedFromCart(userId, productId);
 
         keranjangBelanjaService.removeProductFromKeranjang(userId, productId);
         KeranjangBelanja result = keranjangBelanjaRepository.findKeranjangBelanjaById(keranjangBelanja.getId()).orElseThrow();
@@ -142,22 +253,19 @@ class KeranjangBelanjaServiceImplTest {
         assertNull(result.getSupermarketId());
         verify(keranjangItemRepository, times(1)).delete(item);
         verify(keranjangBelanjaRepository, times(1)).save(keranjangBelanja);
+        verify(logService, times(1)).logProductRemovedFromCart(userId, productId);
     }
+
     @Test
     void testClearKeranjang() {
         Long userId = 1L;
-        KeranjangBelanja keranjangBelanja = new KeranjangBelanja();
-        keranjangBelanja.setId(userId);
+        KeranjangBelanja keranjangBelanja = KeranjangBelanja.getBuilder().setId(userId).build();
 
         List<KeranjangItem> items = new ArrayList<>();
-        KeranjangItem item1 = new KeranjangItem();
-        item1.setProductId("product1");
-        item1.setAmount(1);
+        KeranjangItem item1 = KeranjangItem.getBuilder().setProductId("product1").setAmount(1).build();
         item1.setKeranjangbelanja(keranjangBelanja);
 
-        KeranjangItem item2 = new KeranjangItem();
-        item2.setProductId("product2");
-        item2.setAmount(2);
+        KeranjangItem item2 = KeranjangItem.getBuilder().setProductId("product2").setAmount(2).build();
         item2.setKeranjangbelanja(keranjangBelanja);
 
         items.add(item1);
@@ -166,6 +274,7 @@ class KeranjangBelanjaServiceImplTest {
         keranjangBelanja.setListKeranjangItem(items);
 
         when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
+        doReturn(CompletableFuture.completedFuture(null)).when(logService).logCartCleared(userId);
 
         keranjangBelanjaService.clearKeranjang(userId);
 
@@ -174,48 +283,41 @@ class KeranjangBelanjaServiceImplTest {
         verify(keranjangItemRepository, times(1)).delete(item1);
         verify(keranjangItemRepository, times(1)).delete(item2);
         verify(keranjangBelanjaRepository, times(1)).save(keranjangBelanja);
+        verify(logService, times(1)).logCartCleared(userId);
     }
 
     @Test
-    public void testCountTotal() {
-        Long userId = 1L;
-        Long supermarketId = 1L;
-
-        KeranjangBelanja keranjangBelanja = new KeranjangBelanjaBuilder()
-                .setId(userId)
-                .setSupermarketId(supermarketId)
-                .build();
+    void testCountTotal() {
+        long userId = 1L;
+        String token = "test-token";
+        long supermarketId = 123L;
 
         List<KeranjangItem> items = new ArrayList<>();
-        KeranjangItem item1 = KeranjangItem.getBuilder().setProductId("1").setAmount(4).build();
-        KeranjangItem item2 = KeranjangItem.getBuilder().setProductId("2").setAmount(3).build();
-
+        KeranjangItem item1 = KeranjangItem.getBuilder().setProductId("123").setAmount(2).build();
         items.add(item1);
+
+        KeranjangItem item2 = KeranjangItem.getBuilder().setProductId("456").setAmount(1).build();
         items.add(item2);
 
+        KeranjangBelanja keranjangBelanja = KeranjangBelanja.getBuilder().setSupermarketId(supermarketId).build();
         keranjangBelanja.setListKeranjangItem(items);
 
         when(keranjangBelanjaRepository.findKeranjangBelanjaById(userId)).thenReturn(Optional.of(keranjangBelanja));
 
         GetProductResponse product1 = new GetProductResponse();
-        product1.setUUID("1");
-        product1.setName("Product 1");
-        product1.setStock(10);
-        product1.setPrice(10L);
+        product1.setUUID("123");
+        product1.setPrice(50L);
 
         GetProductResponse product2 = new GetProductResponse();
-        product2.setUUID("2");
-        product2.setName("Product 2");
-        product2.setStock(20);
-        product2.setPrice(20L);
+        product2.setUUID("456");
+        product2.setPrice(100L);
 
-        List<GetProductResponse> productList = new ArrayList<>();
-        productList.add(product1);
-        productList.add(product2);
+        when(productService.getProductById("123", token)).thenReturn(product1);
+        when(productService.getProductById("456", token)).thenReturn(product2);
 
-        when(productService.getAllProduct(supermarketId)).thenReturn(productList);
+        long total = keranjangBelanjaService.countTotal(userId, token);
 
-        assertEquals(100L, keranjangBelanjaService.countTotal(userId));
+        assertEquals(200L, total);
     }
 
 }
